<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/personal_data_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="true"
            android:text="@string/personal_data"
            android:textSize="32sp"
            android:fontFamily="@font/montserrat_bold"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_data_text"
            android:layout_marginStart="25sp"
            android:layout_marginTop="25sp"
            android:ems="7"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:background="@drawable/correct_edit_text_style"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="5sp"/>

        <EditText
            android:id="@+id/surname_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/personal_data_text"
            android:layout_marginStart="20sp"
            android:layout_marginTop="25sp"
            android:layout_toEndOf="@+id/name_input"
            android:ems="7"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/surname"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:background="@drawable/correct_edit_text_style"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="5sp"/>

        <EditText
            android:id="@+id/middleName_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_input"
            android:layout_centerInParent="true"
            android:layout_marginTop="20sp"
            android:ems="8"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/middleName"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:background="@drawable/correct_edit_text_style"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="5sp"/>

        <EditText
            android:id="@+id/city_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleName_input"
            android:layout_marginStart="25sp"
            android:layout_marginTop="30sp"
            android:ems="7"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/city"
            android:inputType="textPersonName"
            android:textSize="20sp"
            android:background="@drawable/correct_edit_text_style"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="5sp"/>

        <EditText
            android:id="@+id/age_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/middleName_input"
            android:layout_marginStart="20sp"
            android:layout_marginTop="30sp"
            android:layout_toEndOf="@id/city_input"
            android:ems="7"
            android:fontFamily="@font/montserrat_bold"
            android:hint="@string/age"
            android:inputType="number"
            android:textSize="20sp"
            android:background="@drawable/correct_edit_text_style"
            android:paddingStart="10sp"
            android:paddingTop="5sp"
            android:paddingEnd="10sp"
            android:paddingBottom="5sp"/>

        <LinearLayout
            android:id="@+id/sex_select_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/city_input"
            android:layout_centerInParent="true"
            android:layout_marginTop="25sp">

            <TextView
                android:id="@+id/sex"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/black"
                android:text="@string/sex"/>

            <RadioGroup
                android:id="@+id/sex_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/sex_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:layout_marginStart="20sp"
                    android:textColor="@color/black"
                    android:text="@string/male"/>

                <RadioButton
                    android:id="@+id/sex_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:layout_marginStart="20sp"
                    android:fontFamily="@font/montserrat_bold"
                    android:textColor="@color/black"
                    android:text="@string/female"/>

            </RadioGroup>

        </LinearLayout>

        <Button
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sex_select_layout"
            android:layout_centerInParent="true"
            android:layout_marginTop="30sp"
            android:text="@string/register"
            android:textSize="20sp"
            android:fontFamily="@font/montserrat_bold"/>

    </RelativeLayout>

</ScrollView>